[gd_scene load_steps=11 format=2]

[ext_resource path="res://mods/CertifiedPyro.TunaGuitar/Scenes/PresetsList/presets_list.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=3]
[ext_resource path="res://mods/CertifiedPyro.TunaGuitar/Scenes/PresetsList/custom_dialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Themes/main_font.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.84, 0.67, 0.45, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0.392157 )
expand_margin_left = 16.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.392157 )
expand_margin_left = 16.0

[sub_resource type="Theme" id=6]
Tree/colors/font_color = Color( 1, 0.93, 0.84, 1 )
Tree/fonts/font = ExtResource( 5 )
Tree/styles/bg = SubResource( 5 )
Tree/styles/bg_focus = SubResource( 3 )
Tree/styles/selected = SubResource( 7 )
Tree/styles/selected_focus = SubResource( 4 )

[node name="PresetsList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="PresetsPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PresetsTree" type="Tree" parent="PresetsPanel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
theme = SubResource( 6 )
allow_reselect = true
hide_folding = true
hide_root = true

[node name="RenameDialog" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
visible = false

[node name="DeleteDialog" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
visible = false

[node name="OverwriteDialog" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
visible = false

[connection signal="button_pressed" from="PresetsPanel/PresetsTree" to="." method="_on_tree_button_pressed"]
[connection signal="item_activated" from="PresetsPanel/PresetsTree" to="." method="_on_tree_item_activated"]
[connection signal="item_selected" from="PresetsPanel/PresetsTree" to="." method="_on_tree_item_selected"]
[connection signal="nothing_selected" from="PresetsPanel/PresetsTree" to="." method="_on_tree_nothing_selected"]
